# movie_info

./: README.md  info.py  pyproject.toml
